# highjson

./: .travis.yml  README.md  cabal.project  hie.yaml  highjson.cabal  stack.yaml
.github/workflows/: workflow.yml
bench/: Twitter.hs
cbits/: unescape_string.c
highjson/: LICENSE  README.md  highjson.cabal
highjson-swagger/: LICENSE  highjson-swagger.cabal
highjson-swagger/Data/HighJson/: Swagger.hs
highjson-swagger/test/: Main.hs
highjson-swagger/test/Data/HighJson/: SwaggerSpec.hs
highjson-th/Data/HighJson/: TH.hs
highjson-th/test/: Main.hs
highjson-th/test/Data/HighJson/: THSpec.hs
highjson/bench/: Twitter.hs
highjson/src/Data/: HighJson.hs
highjson/src/Data/HighJson/: Parser.hs  Serialiser.hs  Types.hs
highjson/test/: Main.hs
highjson/test/Data/: JsonSpec.hs
highjson/test/Data/Json/: SerialiserSpec.hs
scripts/: ci.sh
src/Data/: HighJson.hs  Json.hs
src/Data/HighJson/: Parser.hs  Serialiser.hs
src/Data/Json/: Parser.hs  Serialiser.hs
test/Data/: JsonSpec.hs
test/Data/Json/: ParserSpec.hs  SerialiserSpec.hs
