name:                highjson
version:             0.1.0.0
synopsis:            Very fast JSON parsing
-- description:         
homepage:            https://github.com/agrafix/highjson
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2015 Alexander Thiemann
category:            Text, Web, JSON
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Json.Parser
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       attoparsec >=0.13.0.0,
                       bytestring >=0.10.4.0,
                       containers,
                       unordered-containers >=0.2.5,
                       vector >=0.7.1,
                       text >=1.1.1,
                       hashable >=1.1.2,
                       scientific >=0.3.3,
                       hvect >=0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
