name:                highjson
version:             0.2.0.3
synopsis:            Fast and easy to use JSON serialisation and parsing library
description:         Low boilerplate, easy to use and very fast JSON serialisation and parsing without generics or TemplateHaskell
homepage:            https://github.com/agrafix/highjson
bug-reports:         https://github.com/agrafix/highjson/issues
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2015 Alexander Thiemann
category:            Text, Web, JSON
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10
tested-with:         GHC==7.8.3, GHC==7.10.1, GHC==7.10.2

extra-source-files:
    bench/json-data/*.json
    README.md

library
  exposed-modules:
                       Data.Json
                       Data.Json.Parser
                       Data.Json.Serialiser
  build-depends:
                       attoparsec >=0.12.0.0,
                       base >=4.7 && <5,
                       buffer-builder >=0.2.4,
                       bytestring >=0.10.4.0,
                       containers,
                       hashable >=1.1.2,
                       hvect >=0.2,
                       scientific >=0.3.3,
                       text >=1.1.1,
                       unordered-containers >=0.2.5,
                       vector >=0.7.1
  hs-source-dirs:      src
  c-sources:           cbits/unescape_string.c
  cc-options:          -Wall
  default-language:    Haskell2010

test-suite highjson-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
                       Data.Json.ParserSpec
  build-depends:
                       QuickCheck >=2.8,
                       base,
                       highjson,
                       hspec >= 2.0,
                       text
  default-language:    Haskell2010
  ghc-options: -Wall -fno-warn-orphans

benchmark highjson-benchmarks
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -O2
  hs-source-dirs:   bench
  default-language: Haskell2010
  main-is:          Twitter.hs
  build-depends:
                    aeson >=0.8,
                    base,
                    bytestring,
                    criterion >=1.1,
                    deepseq,
                    highjson,
                    text

source-repository head
  type:     git
  location: git://github.com/agrafix/highjson.git
