name:                highjson-swagger
version:             0.3.0.0
synopsis:            Derive swagger instances from highjson specs
description:         Derive swagger instances from highjson specs
homepage:            https://github.com/agrafix/highjson
bug-reports:         https://github.com/agrafix/highjson/issues
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2017 Alexander Thiemann
category:            Text, Web, JSON
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10
tested-with:         GHC==8.0.1

library
  exposed-modules:
                  Data.HighJson.Swagger
  build-depends:
                base >=4.8 && <5,
                highjson >= 0.3,
                swagger2 >= 2.1.3,
                text,
                lens,
                insert-ordered-containers >= 0.2,
                hvect
  hs-source-dirs:      .
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/agrafix/highjson.git
